--- a/index.html
+++ b/index.html
@@ -6,76 +6,87 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="keywords" content="Resume, cv" />
 		<meta name="description" content="Мое резюме" />
+		<link rel="stylesheet" href="style.css" />
 		<title>Resume</title>
 	</head>
 	<body>
-		<img src="avatar.jpg" alt="avatar" width="200" />
-		<h1>Лукашов Сергей</h1>
-		<p>
-			Я <strong>лентяй</strong> по жизни. Сейчас поступил в магистратуру, чтоб
-			<strong>не</strong> идти <strong>опять</strong> работать. Потерял своё
-			счастье в жизни.
-		</p>
-		<p>
-			Мне <strong>нравится</strong> <em>гулять</em> по ночному городу,
-			<em>слушать</em> музыку, <em>загоняться</em> по пустякам.
-		</p>
+		<div class="container">
+			<div class="info">
+				<img src="avatar.jpg" alt="avatar" class="avatar" />
+				<div class="info-text">
+					<h1>Лукашов Сергей</h1>
+					<p>
+						Я <strong>лентяй</strong> по жизни. Сейчас поступил в магистратуру,
+						чтоб <strong>не</strong> идти <strong>опять</strong> работать.
+						Потерял своё счастье в жизни.
+					</p>
+					<p>
+						Мне <strong>нравится</strong> <em>гулять</em> по ночному городу,
+						<em>слушать</em> музыку, <em>загоняться</em> по пустякам.
+					</p>
 
-		<h2>Мои хобби</h2>
-		<ol>
-			<li>Прогулки</li>
-			<li>Путешествия</li>
-			<li>Программирование</li>
-			<li>Музыка</li>
-		</ol>
-
-		<h2>Опыт работы</h2>
-		<table border="black" width="500">
-			<thead>
-				<tr>
-					<th>Название</th>
-					<th>Должность</th>
-					<th>Год</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr>
-					<td align="center" colspan="3">Безработный</td>
-				</tr>
-			</tbody>
-			<tfoot></tfoot>
-		</table>
-
-		<br />
-		<h4>Список социальных сетей:</h4>
-		<p>
-			<a href="https://vk.com/lukashov_69" target="_blank">Вконтакте</a> |
-			<a href="https://t.me/lukashov_69" target="_blank">Telegram</a>
-		</p>
-
-		<br /><br />
-		<h2>Связаться со мной</h2>
-		<form action="/">
-			<div>
-				<label for="name">Ваше имя:</label>
-				<input type="text" id="name" placeholder="Введите имя" />
+					<h4>Список социальных сетей:</h4>
+					<a href="https://vk.com/lukashov_69" target="_blank">Вконтакте</a> |
+					<a href="https://t.me/lukashov_69" target="_blank">Telegram</a>
+				</div>
 			</div>
-			<div>
-				<label for="email">Ваш email:</label>
-				<input type="email" id="email" placeholder="Введите email" />
+
+			<div class="card hobby">
+				<h2>Мои хобби</h2>
+				<ol class="list">
+					<li>Прогулки</li>
+					<li>Путешествия</li>
+					<li>Программирование</li>
+					<li>Музыка</li>
+				</ol>
 			</div>
-			<div>
-				<label for="message">Ваше сообщение:</label>
-				<br />
-				<textarea
-					id="message"
-					cols="30"
-					rows="5"
-					placeholder="Введите сообщение..."
-				></textarea>
-				<br />
-				<button type="submit">Отправить!</button>
+
+			<div class="card expirience">
+				<h2>Опыт работы</h2>
+				<table class="table">
+					<thead>
+						<tr>
+							<th>Название</th>
+							<th>Должность</th>
+							<th>Год</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td colspan="3">Безработный</td>
+						</tr>
+					</tbody>
+					<tfoot></tfoot>
+				</table>
 			</div>
-		</form>
+
+			<div class="card contact"></div>
+			<form action="/" class="form">
+				<h2>Связаться со мной</h2>
+
+				<div class="form-row">
+					<div class="form-group">
+						<label for="name">Ваше имя:</label>
+						<input type="text" id="name" placeholder="Введите имя" />
+					</div>
+					<div class="form-group">
+						<label for="email">Ваш email:</label>
+						<input type="email" id="email" placeholder="Введите email" />
+					</div>
+				</div>
+				
+				<div class="form-group">
+					<label for="message">Ваше сообщение:</label>
+					<textarea
+						id="message"
+						cols="30"
+						rows="5"
+						placeholder="Введите сообщение..."
+					></textarea>
+					<br />
+					<button type="submit" class="btn">Отправить!</button>
+				</div>
+			</form>
+		</div>
 	</body>
 </html>
