--- a/index.html
+++ b/index.html
@@ -16,13 +16,9 @@
 				<div class="info-text">
 					<h1>Лукашов Сергей</h1>
 					<p>
-						Я <strong>лентяй</strong> по жизни. Сейчас поступил в магистратуру,
-						чтоб <strong>не</strong> идти <strong>опять</strong> работать.
-						Потерял своё счастье в жизни.
-					</p>
-					<p>
-						Мне <strong>нравится</strong> <em>гулять</em> по ночному городу,
-						<em>слушать</em> музыку, <em>загоняться</em> по пустякам.
+						Я только начинаю свой путь в IT, а именно в Frontend разработке. Мне
+						нравится разбираться в чём-то новом. Планирую развивать себя как
+						разработчика и добиваться в этом успехов.
 					</p>
 
 					<h4>Список социальных сетей:</h4>
@@ -34,7 +30,6 @@
 			<div class="card hobby">
 				<h2>Мои хобби</h2>
 				<ol class="list">
-					<li>Прогулки</li>
 					<li>Путешествия</li>
 					<li>Программирование</li>
 					<li>Музыка</li>
@@ -43,7 +38,7 @@
 
 			<div class="card expirience">
 				<h2>Опыт работы</h2>
-				<table class="table">
+				<!-- <table class="table">
 					<thead>
 						<tr>
 							<th>Название</th>
@@ -57,7 +52,12 @@
 						</tr>
 					</tbody>
 					<tfoot></tfoot>
-				</table>
+				</table> -->
+
+				<p>
+					На данный момент учусь в университете на первом курсе магистратуры.
+					Паралельно ищу место, где можно проходить стажировку.
+				</p>
 			</div>
 
 			<div class="card contact"></div>
@@ -74,7 +74,7 @@
 						<input type="email" id="email" placeholder="Введите email" />
 					</div>
 				</div>
-				
+
 				<div class="form-group">
 					<label for="message">Ваше сообщение:</label>
 					<textarea
